Linked the controller to home, added the start of a form

--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -18,16 +18,13 @@
             <input type="text" class="form-control" id="destination" placeholder="Choose an end point" />
         </div>
         <div class="form-group">
-            <label for="origin">Departure Date</label>
-            <input type="text" class="form-control" id="origin" aria-describedby="emailHelp" placeholder="Choose a starting location" />
-            <label for="destination">Return Date</label>
-            <input type="text" class="form-control" id="destination" placeholder="Choose an end point" />
+            <label for="departure">Departure Date</label>
+            <input type="date" class="form-control" id="departure" aria-describedby="emailHelp" placeholder="Select a departure date" />
+            <label for="return">Return Date</label>
+            <input type="date" class="form-control" id="return" placeholder="Select a return date" />
         </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <button type="submit" class="btn btn-primary">Search for flights!</button>
     </form>
 
 
