added results format

--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -4,6 +4,18 @@
 
 <body>
 
+<div class="container">
+
+    <div><!--Run a for each on the saved searches per profile to display them -->
+        <div><!--Origin--></div>
+        <div><!--Destination--></div>
+        <div><!--Date--></div>
+        <div><!--Price--></div>
+        <div><!--Link to search results--></div>
+        <div><!--Link to general information about destination--></div>
+    </div>
+
+</div>
 
 <div th:replace="partials/header :: header"></div>
 </body>
