--- a/src/main/resources/templates/search/results.html
+++ b/src/main/resources/templates/search/results.html
@@ -3,6 +3,17 @@
 <head th:replace="partials/header :: header"></head>
 
 <body>
+<div class="container">
+
+    <div><!--Run a for each on the results to display them -->
+        <div><!--Airline--></div>
+        <div><!--Time--></div>
+        <div><!--Any stops--></div>
+        <div><!--Price--></div>
+        <div><!--Link to flight--></div>
+    </div>
+
+</div>
 
 
 <div th:replace="partials/header :: header"></div>
