--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -7,40 +7,31 @@
 
 <div class="container">
 
-
-
     <h1>Welcome to Viatorem! Where should we go?</h1>
-    <form>
+    <form th:action="@{/search/home}" method="post" th:object="${search}">
         <div class="form-group">
-            <div class="ui-widget">
-                <label for="origin">Select Origin</label>
-                <input type="text" id="origin" aria-describedby="emailHelp" placeholder="Choose a starting location" />
-            </div>
-            <div class="ui-widget" style="margin-top:2em; font-family:Arial">
-                Result:
-                <div id="log" style="height: 200px; width: 300px; overflow: auto;" class="ui-widget-content"></div>
-            </div>
+            <label for="origin">Select Origin</label>
+            <input th:field="*{origin}" type="text" id="origin" class="airports" aria-describedby="emailHelp" placeholder="Choose a starting location" />
             <label for="destination">Select Destination</label>
-            <input type="text" id="destination" placeholder="Choose an end point" />
+            <input th:field="*{destination}" type="text" id="destination" class="airports" placeholder="Choose an end point" />
             <br/>
             <label for="departure">Departure Date</label>
-            <input type="date" id="departure" aria-describedby="emailHelp" placeholder="Select a departure date" />
-            <label for="return">Return Date</label>
-            <input type="date" id="return" placeholder="Select a return date" />
-            <label class="form-check-label" for="oneway">One Way</label>
-            <input type="checkbox" class="form-check-input" id="oneway" />
+            <input th:field="*{start_date}" type="date" id="departure" aria-describedby="emailHelp" placeholder="Select a departure date" />
+            <label for="returnDate">Return Date</label>
+            <input th:field="*{end_date}" type="date" id="returnDate" placeholder="Select a return date" />
+            <!--<label class="form-check-label" for="oneway">One Way</label>-->
+            <!--<input type="checkbox" class="form-check-input" id="oneway" />-->
             <label for="price">Name a price</label>
-            <input type="text" id="price" placeholder="0.00" />
-            <label for="currency">Currency:</label>
-            <input type="text" id="currency" placeholder="USD"/>
+            <input th:field="*{price}" type="text" id="price" placeholder="0.00" />
+            <!--<label for="currency">Currency:</label>-->
+            <!--<input type="text" id="currency" placeholder="USD"/>-->
             <p>Select the number of travelers: <span>
                 <label for="adults">Adults</label>
-                <input type="number" id="adults" placeholder="1" />
+                <input th:field="*{adults}" type="number" id="adults" placeholder="1" />
                 <label for="children">Children</label>
-                <input type="number" id="children" placeholder="1" />
+                <input th:field="*{children}" type="number" id="children" placeholder="1" />
             </span></p>
         </div>
-
         <button id="lowFlight" type="submit" class="btn btn-primary search">Search for flights!</button>
     </form>
 
