--- a/src/main/resources/templates/search/poi.html
+++ b/src/main/resources/templates/search/poi.html
@@ -23,8 +23,8 @@
    var mapOptions = {
        zoom: 12,
        center: {
-           lat:  42.350921,
-           lng: -71.069951
+           lat:  49.10,
+           lng: -123.11934
        },
        mapTypeId: google.maps.MapTypeId.TERRAIN
    };
@@ -34,58 +34,75 @@
 //setting the main marker ...should be the user destination
    marker = new google.maps.Marker({
        position: {
-           lat:  42.350921,
-           lng: -71.069951
+           lat:  49.10,
+           lng: -123.11934
        },
        map: map
    });
 
 
-//function to get a marker for each poi on the JSON
-//    function poiToMarker( data)
-//    {
-//        for (var i = 0; i < data.points_of_interest.length; i++) {
-//            {
-//                marker = new google.maps.Marker({
-//                    position: {
-//                        lat: poi.location.latitude,
-//                        lng: poi.location.longitude
-//                    },
-//                    map: map
-//                });
-//            }
-//        }
-//    }
 
-   // function myCategory(categories,category) {
-   //     var isCategory=-1
-   //     for (var i=0;i<categories.length;i++){
-   //         if (categories[i].indexOf(category) >= 0);
-   //         {
-   //             isCategory=1;
-   //         }
-   //     }
-   //     return isCategory;
-   // }
+
+
+// function to get a marker for each poi on the JSON
+   function poiToMarker( data,category)
+   {
+       for (var i = 0; i < data.points_of_interest.length; i++) {
+           if(!data.points_of_interest[i].categories.length==0
+           &&myCategory(data.points_of_interest[i].categories,category)==1)
+           {
+               marker = new google.maps.Marker({
+                   position: {
+                       lat: data.points_of_interest[i].location.latitude,
+                       lng: data.points_of_interest[i].location.longitude
+                   },
+                   map: map
+               });
+
+           }
+           //some poi don't have any category
+           else {
+               marker = new google.maps.Marker({
+                   position: {
+                       lat: data.points_of_interest[i].location.latitude,
+                       lng: data.points_of_interest[i].location.longitude
+                   },
+                   map: map
+               });
+           }
+       }
+   }
+
+   function myCategory(categories,category) {
+       var isCategory=-1
+       for (var i=0;i<categories.length;i++){
+           if (categories[i].indexOf(category) >= 0);
+           {
+               isCategory=1;
+           }
+       }
+       return isCategory;
+   }
 
 
 //calling the function to set the poi markers on the map
 //     poiToMarker($poi);
 
+    var categoria='';
 
-
-    //obtain the Poi JSON
+// obtain the Poi JSON
    $.get('https://api.sandbox.amadeus.com/v1.2/points-of-interest/yapq-search-circle?',
         {
         dataType : 'json',
-        apikey: '8XVJrEZAxpKF0vkSXh9HGpKGVAxVEGhD',
+        // apikey: '8XVJrEZAxpKF0vkSXh9HGpKGVAxVEGhD',
         // apikey:'v6aAEJ4TnGgvIJhW6cKrX7wW0hCVwsfy',
-        latitude:'42.350921',
-        longitude:'-71.069951',
-        radius:'3'
+        apikey:'5IomxX3j0OOD87Um4X9aTZdAgnttyJG0',
+        latitude:'49.10',
+        longitude:'-123.11934',
+        radius:'10'
     }).done(function(data)
-    {
-        console.log(data);
+    {   console.log(data);
+        poiToMarker(data,categoria);
     });
 
 
