Wired up registration form and saved posts to a user

--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -35,7 +35,7 @@
                           <span class="profile-ava">
                               <img alt="" src="img/avatar1_small.jpg"/>
                           </span>
-                          <span class="username">Jake Johnson</span>
+                          <span th:text="${user.username}"></span>
                           <b class="caret"></b>
                       </a>
           <ul class="dropdown-menu extended logout">
