--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -92,7 +92,7 @@
           </a>
         </li>
         <li class="sub-menu">
-          <a href="javascript:;" class="">
+          <a href="javascript:" class="">
                         <i class="icon_documents_alt"></i>
                         <span>Pages</span>
                         <span class="menu-arrow arrow_carrot-right"></span>
@@ -287,89 +287,19 @@
               </div>
             </h4>
           </div>
+          <!--Div for the hotels search-->
           <div id="collapseTwo" class="panel-collapse collapse in">
             <div class="panel-body">
               <table class="table table-striped table-advance bootstrap-datatable table-hover">
-                <tbody>
+                <tbody id="hotels">
                 <tr>
-                  <th><i class="icon_profile"></i> location</th>
-                  <th><i class="icon_calendar"></i> check in</th>
-                  <th><i class="icon_mail_alt"></i> check out</th>
-                  <th><i class="icon_pin_alt"></i> price</th>
-                  <th><i class="icon_mobile"></i> currecy</th>
+                  <th><i class="icon_profile"></i> Hotel Name</th>
+                  <th><i class="icon_calendar"></i> Address</th>
+                  <th><i class="icon_pin_alt"></i> Check out</th>
+                  <th><i class="icon_pin_alt"></i> Adress</th>
+                  <th><i class="icon_email"></i> currecy</th>
                   <th><i class="icon_tool"></i> Action</th>
                 </tr>
-                <tr>
-                  <td>destination</td>
-                  <td>12/12/2018</td>
-                  <td>01/23/2019</td>
-                  <td>$$$$$$$$</td>
-                  <td>USD</td>
-                  <td>
-                    <div class="btn-group">
-                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>destination</td>
-                  <td>12/12/2018</td>
-                  <td>01/23/2019</td>
-                  <td>$$$$$$$$</td>
-                  <td>USD</td>
-                  <td>
-                    <div class="btn-group">
-                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>destination</td>
-                  <td>12/12/2018</td>
-                  <td>01/23/2019</td>
-                  <td>$$$$$$$$</td>
-                  <td>USD</td>
-                  <td>
-                    <div class="btn-group">
-                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>destination</td>
-                  <td>12/12/2018</td>
-                  <td>01/23/2019</td>
-                  <td>$$$$$$$$</td>
-                  <td>USD</td>
-                  <td>
-                    <div class="btn-group">
-                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>destination</td>
-                  <td>12/12/2018</td>
-                  <td>01/23/2019</td>
-                  <td>$$$$$$$$</td>
-                  <td>USD</td>
-                  <td>
-                    <div class="btn-group">
-                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                    </div>
-                  </td>
-                </tr>
-
                 </tbody>
               </table>
             </div>
