--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -42,6 +42,11 @@
           </div>
           <br/>
           <div class="input-group">
+              <span class="input-group-addon"></span>
+              <input th:field="*{phonenumber}" id="phonenumber" name="phonenumber" placeholder="Enter a phone number" class="form-control form-control-sm" type="text" required=""/>
+          </div>
+          <br/>
+          <div class="input-group">
               <span class="input-group-addon"><i class="icon_key_alt"></i></span>
               <input th:field="*{password}" id="password" name="password" placeholder="choose your password" class="form-control form-control-sm" type="password" required=""/>
           </div>
