--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -245,26 +245,6 @@
                                                                         <th><i class="icon_cogs"></i>Action</th>
                                                                     </tr>
 
-
-                                                                    <tr>
-                                                                        <td>origin</td>
-                                                                        <td>dest</td>
-                                                                        <td>12/12/2018</td>
-                                                                        <td>01/20/2018</td>
-                                                                        <td>$$$$$$</td>
-                                                                        <td>yes/no</td>
-                                                                        <td>1</td>
-                                                                        <td>300</td>
-                                                                        <td>
-                                                                            <div class="btn-group">
-                                                                                <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                                                                <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
-
-
-
                                                                     </tbody>
                                                                 </table>
                                                             </div>
@@ -342,26 +322,14 @@
                                                                 <table class="table table-striped table-advance table-hover container col-lg-12">
                                                                     <tbody id="hotels">
                                                                     <tr>
-                                                                        <th><i class="icon_datareport"></i> Destination</th>
-                                                                        <th><i class="icon_calendar"></i> Check in</th>
-                                                                        <th><i class="icon_calendar"></i> Check out</th>
-                                                                        <th><i class="icon_calendar"></i> price</th>
+                                                                        <th><i class="icon_datareport"></i> Name</th>
+                                                                        <th><i class="icon_calendar"></i> Address</th>
+                                                                        <th><i class="icon_calendar"></i> Contact</th>
+                                                                        <th><i class="icon_calendar"></i> Price</th>
                                                                         <th><i class="icon_cogs"></i>Action</th>
                                                                     </tr>
 
 
-                                                                    <tr>
-                                                                        <td>dest</td>
-                                                                        <td>12/12/2018</td>
-                                                                        <td>01/20/2018</td>
-                                                                        <td>$$$$$$</td>
-                                                                        <td>
-                                                                            <div class="btn-group">
-                                                                                <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                                                                <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
 
 
 
