--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -171,6 +171,24 @@
                         <button id="lowFlight" type="button" class="btn btn-primary" >Search flights!</button>
 
                     </form>
+                    <!--Show results-->
+                    <div id="collapseThree" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <table class="table table-striped table-advance bootstrap-datatable table-hover">
+                                <tbody id="flies">
+                                <tr>
+                                    <th><i class="fa fa-building-o"></i> Flight Number</th>
+                                    <th><i class="icon_pin_alt"></i> Operating  Airline</th>
+                                    <th><i class="icon_mobile"></i> Departs at</th>
+                                    <th><i class="fa fa-money"></i> Arrives at</th>
+                                    <th><i class="fa fa-money"></i> Duration</th>
+                                    <th><i class="icon_tool"></i> Tax</th>
+                                    <th><i class="icon_tool"></i> Total fare</th>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
 
 
                 </div>
@@ -213,11 +231,28 @@
 
                     </form>
 
+                    <div>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <table class="table table-striped table-advance bootstrap-datatable table-hover">
+                                <tbody id="hotels">
+                                <tr>
+                                    <th><i class="fa fa-building-o"></i> Hotel Name</th>
+                                    <th><i class="icon_pin_alt"></i> Adress</th>
+                                    <th><i class="icon_mobile"></i> Phone</th>
+                                    <th><i class="fa fa-money"></i> price</th>
+                                    <th><i class="fa fa-money"></i> currecy</th>
+                                    <th><i class="icon_tool"></i> Action</th>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
 
                 </div>
-
-
             </div>
+
 
             <div id="rental" class="tab-pane">
                 <div class="container">
@@ -256,7 +291,22 @@
 
                     </form>
 
-
+                    <div id="collapseThree" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <table class="table table-striped table-advance bootstrap-datatable table-hover">
+                                <tbody id="cars">
+                                <tr>
+                                    <th><i class="fa fa-building-o"></i> Company Name</th>
+                                    <th><i class="icon_pin_alt"></i> Adress</th>
+                                    <th><i class="icon_mobile"></i> Phone</th>
+                                    <th><i class="fa fa-money"></i> price</th>
+                                    <th><i class="fa fa-money"></i> currecy</th>
+                                    <th><i class="icon_tool"></i> Action</th>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
 
