Hid the API key and twilio credentials. Set up twilio service.

--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -13,6 +13,7 @@
 
 <body>
 <!-- container section start -->
+<input type="hidden" id="amadeus-API" th:value="${apikey}" />
 <section id="container" class="">
 
 
